2021/10/24 v136
	1. A dynamic task threshold mechanism added, so the cpu time may be required more for too many tasks.
	2. The lower priority task will be level up as normal priority if not handled after several phases to avoid the timer not work when there is too many normal or high tasks.

2021/09/28 v129
	1. Remove a cache check which cause the raid panel doesn't show all the units.

2021/09/28 v127
	1. Wow.FromNextUnitEvent added, so no need use Next for the Health & Power Subject, this'd reduce the task count for performance.

2021/09/26 v124
	1. Add token for the Observable to stop its operations correctly.

2021/09/15 v118
	1. Wow.GetFrame(uitype, observable|event name|observable property name) is added, it'll combine the parent that match the uitype with the
	observable datas(as the first value) to the next.

2021/09/08 v116
	1. Fix the Next method to observable, it'll cause mass display errors.

2021/09/04 v112
	1. The unit like targettarget, part1target will be converted to the real unit for unit event mapping like boss1 through the GUID if that unit existed.
	2. `__Message__` and SendAddonMessage is added, it's a full message framework, async encode API is added for base64 and deflate.
	3. Unit Died Combat Log Event will trigger the UNIT_HEALTH for updating.
	4. The hover spell support spell sub level in classic now.


2021/08/29 v111
	1. Fix the flash of the cast bar.
	2. Fix the Wow.UnitCastInterruptible for channel spell.

2021/08/28 v110
	1. Fix the flash of the SecureGroupPanel to force the refreshing.
	2. Fix the ready check logic.

2021/08/20 v108
	1. Add the unregister unit frame operation when secure group panel is deleted, so re-use them won't cause all unit settings continuely be cleared.

2021/08/16 v106
	1. The PLoop and other Scorpio Libs are embedded into the Scorpio.

2021/08/05 v105
	1. ActiveTreeNode and ClearTreeNodes is added to the TreeView.

2021/08/05 v104
	1. Fix the warrior can't swap the main action bar in classic client.