@@ -1,3 +1,6 @@
+2022/08/01 v146
+	1. In a skin of the ui class, it can set the skin for other classes, that'd be applied on all child of the same classes.
+
 2021/10/24 v136
 	1. A dynamic task threshold mechanism added, so the cpu time may be required more for too many tasks.
 	2. The lower priority task will be level up as normal priority if not handled after several phases to avoid the timer not work when there is too many normal or high tasks.
